<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_email_not_valid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_highlight_register_here">Register Here</string>
    <string name="text_error_password_not_match">Password doesn\'t match</string>
    <string name="text_error_name_empty">Name should not be empty</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name= "text_menu_not_found">Menu Not Found</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>


    <string name="app_name">FoodFleet App</string>
    <string name="category_name">Nama Kategori</string>
    <string name="menu_name">Nama Menu</string>
    <string name="menu_price">Harga Menu</string>
    <string name="menu_rate">4.9</string>
    <string name="menu_list">Menu Makanan</string>
    <string name="hello_tag">Hai Nellam, </string>
    <string name="tagline">Mau makan apa hari ini?</string>
    <string name="icon_profile">Icon Profile</string>
    <string name="icon_shopping_cart">Icon Shopping Cart</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="deskripsi_menu">Varian dari pangsit tradisional China yang disajikan dengan cara dikukus dan digoreng.</string>
    <string name="location_complete">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="chartadd">Tambah ke Keranjang - Rp 0.000</string>
    <string name="price">Rp 10.000</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="keranjang">Keranjang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="total_quantity">x%s</string>
    <string name="a_description_of_the_tagline_text">A description of the tagline text</string>
    <string name="empty_text">Teks yang tidak terlihat</string>
    <string name="text_lokasi">Lokasi</string>
    <string name="text_menu_recommendation">Menu Recommendation</string>
    <string name="text_order">Order</string>
    <string name="text_total_payment">Total Payment</string>
    <string name="text_payment_summary">Payment Summary</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="text_cash">Cash</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_shipping_method">Shipping Method</string>
    <string name="text_order_confirmation">Order Confirmation</string>
    <string name="text_your_cart">Your Cart</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_empty">Teks yang tidak terlihat</string>

    <string name="text_hint_name">Enter your name</string>
    <string name="text_hint_email">Enter your email</string>
    <string name="text_hint_password">Enter your password</string>
    <string name="text_hint_confirm_password">Confirm your password</string>
    <string name="text_not_registered_yet">Not Registered yet?</string>
    <string name="text_category">Category</string>
    <string name="text_checkout">Checkout</string>
    <string name="bt_switch">switch</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_minus_cart">minus cart</string>
    <string name="text_menu_image">menu image</string>
    <string name="text_back_to_home">back to home</string>
    <string name="text_buka_peta_lokasi_toko">Buka Peta Lokasi Toko</string>
    <string name="text_logo_app">logo app</string>
    <string name="text_profile">Profile</string>
    <string name="text_edit_profile">edit profile</string>
    <string name="text_personal_info">Personal Info</string>
    <string name="text_username">Name</string>
    <string name="text_password">Password</string>
    <string name="text_star">******</string>
    <string name="text_email">Email</string>
    <string name="text_remove_cart">remove cart</string>
    <string name="text_hint_notes">Hint Notes</string>
    <string name="tx_order_success">Order Success</string>
    <string name="tx_back_to_home">Back To Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="text_category_not_found">Category Not Found</string>
    <string name="text_register_failed">Register Failed</string>
    <string name="text_login_failed">Login Failed</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_logout_dialog">Do you want to logout ?</string>
    <string name="text_profile_update_success">Profile updated successfully</string>
    <string name="text_change_profile_failed">Change Profile Failed</string>
    <string name="text_okay">Okay</string>
    <string name="text_change_pass_email">Change password request sent to your email</string>
    <string name="text_add_cart_success">Add to cart success !</string>
    <string name="text_checkout_error" translatable="false">Checkout Error</string>
    <string name="text_cart_list_empty">Cart Empty</string>
</resources>