<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewHeader1"
                tools:textStyle="bold"
                android:layout_width="230dp"
                android:layout_height="22dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hello_tag"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewHeader2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tagline"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:contentDescription="@string/a_description_of_the_tagline_text"
                app:layout_constraintStart_toStartOf="@id/textViewHeader1"
                app:layout_constraintTop_toTopOf="@id/textViewHeader1" />


            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_profile"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toEndOf="@+id/textViewHeader1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>