<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_menu_item_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_menu_image"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_usus"
            android:contentDescription="@string/text_menu_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="18dp"
        android:alpha="0.8"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/menu_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/cv_menu_image"
        app:layout_constraintStart_toEndOf="@+id/cv_menu_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/menu_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_name"
        app:layout_constraintStart_toEndOf="@+id/cv_menu_image"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="IDR 0"/>

    <TextView
        android:id="@+id/iv_menu_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="0sp"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161" />

    <TextView
        android:id="@+id/tv_menu_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="0sp"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"/>

</androidx.constraintlayout.widget.ConstraintLayout>
